--- a/source/resource/template.html
+++ b/source/resource/template.html
@@ -4,8 +4,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-{{= it.variables.headerNode?.toString() }}
-    <title>{{= it.variables.title }}</title>
+{{= it.variables.headerNode?.toString() ?? "" }}
   </head>
   <body>
 
