--- a/source/resource/template.html
+++ b/source/resource/template.html
@@ -4,6 +4,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="./style.css">
 {{= it.variables.headerNode?.toString() ?? "" }}
   </head>
   <body>
